<resources>
    <string name="app_name">Learn Java</string>


    <string name="label_sign_in">Войти</string>
    <string name="label_sign_up">Зарегистрироваться</string>
    <string name="label_sign_out">Выйти</string>

    <string name="text_sign_up">Регистрация</string>
    <string name="text_enter_your_details">Введите ваши данные</string>

    <string name="text_email">Эл. почта</string>
    <string name="text_password">Пароль</string>
    <string name="text_name">Имя</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_password_repeat">Повторите пароль</string>

    <string name="text_error_valid">Введены невалидные данные!</string>
    <string name="text_error_fill_field">Заполните поле!</string>
    <string name="text_error_wrong_email">Неверный адрес!</string>
    <string name="text_error_too_little_name">Слишком короткое имя!</string>
    <string name="text_error_too_little_password">Пароль должен быть длиннее 8 символов!</string>
    <string name="text_error_wrong_password">Пароль должен содержать только цифры и лат. буквы!</string>
    <string name="text_error_signed_up">Вы уже зарегистрированы!</string>
    <string name="text_error_wrong_repeat_password">Пароли не совпадают!</string>
    <string name="text_error_wrong_auth">Введены неверные данные!</string>


    <string name="label_profile">Профиль</string>
    <string name="label_shop">Магазин</string>
    <string name="label_lessons">Обучение</string>

    <string name="text_error_not_available_lesson">Сначала пройдите предыдущие уроки!</string>

    <string name="text_question_sure_sign_out">Вы уверены, что хотите выйти?</string>
    <string name="text_question_sure_exit_from_test">Результат не сохранится! Вы уверены, что хотите выйти из теста?</string>
    <string name="text_question_sure_deleting_lesson">Вы уверены, что хотите удалить урок "%1$s"?</string>
    <string name="text_you_stayed">Мы рады, что вы остались!</string>
    <string name="text_lets_continue">Продолжаем!</string>
    <string name="text_saving_results">Ваш результат сохранён!</string>
    <string name="text_not_saving_results">Результат не улучшен.</string>

    <string name="label_your_lvl">Твой уровень</string>
    <string name="label_lvl">Уровень</string>
    <string name="label_lesson">Урок %1$d</string>
    <string name="label_dialog_lesson">Урок: %1$d/%2$d</string>
    <string name="label_dialog_progress">Прогресс: %1$d/%2$d</string>
    <string name="label_cancel">Отмена</string>
    <string name="label_yes_sure">Да, уверен</string>
    <string name="label_exit">Выход</string>
    <string name="label_exit_from_test">Выход из теста</string>
    <string name="label_deleting_lesson">Удаление урока</string>
    <string name="label_go_test">Пройти тест</string>
    <string name="label_check">Проверить</string>
    <string name="label_forgot_pass"><u>Забыли пароль?</u></string>
    <string name="label_forgot_send">Отправить</string>
    <string name="label_start_lesson">Начать урок</string>

    <string name="dialog_start_lesson_helping">Прочитай материал по теме и пройди тест, а также, конечно, не забывай практиковаться!</string>

    <string name="label_settings">Настройки</string>
    <string name="label_change_user_data">Изменение данных пользователя</string>
    <string name="label_change_user_photo">Изменить фото профиля</string>
    <string name="text_avatar_updated">Аватар сохранен!</string>
    <string name="text_avatar_not_updated">Аватар не сохранен!</string>
    <string name="text_name_updated">Имя сохранено!</string>
    <string name="text_email_updated">E-mail сохранен!</string>
    <string name="text_no_updates">Изменений нет</string>

    <string name="text_stars_count">Количество звёзд - %1$d</string>
    <string name="text_section_is_developing">Раздел в разработке…</string>
    <string name="text_right_answer">Правильный ответ:</string>
    <string name="text_right">Верно!</string>
    <string name="text_next">Далее</string>
    <string name="text_verification">Регистрация прошла успешно. Проверьте почту и пройдите верификацию.</string>
    <string name="text_no_internet">No internet connection</string>
    <string name="text_go_verificate">Пройдите верификацию по ссылке в сообщениях вашей эл. почты</string>
    <string name="text_not_selected">не задан</string>
    <string name="label_answers">Варианты ответов</string>
    <string name="text_answers_empty">Список вариантов ответов пуст</string>
    <string name="hint_question">Вопрос</string>
    <string name="hint_code_for_question">Программа для вопроса</string>
    <string name="text_new_question">Новый вопрос</string>
    <string name="text_to_add_question">Добавить вопрос</string>
    <string name="text_new_answer">Новый ответ</string>
    <string name="text_to_add_answer">Добавить ответ</string>
    <string name="label_add_lesson">Добавить урок</string>
    <string name="label_change_lesson">Изменить урок</string>
    <string name="label_delete_lesson">Удалить урок</string>

</resources>
