<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/toolbar_settings"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/settings_toolbar"
        android:background="@color/colorAccent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_16dp"
        android:layout_below="@id/settings_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                style="@style/Text.Medium"
                android:textColor="@color/colorAccent"
                android:text="@string/label_change_user_data"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_avatar_light"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/settings_til_name"
                    android:hint="@string/text_name"
                    style="@style/TIL.Profile">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/settings_et_name"
                        android:layout_width="300dp"
                        android:layout_height="48dp"
                        android:maxLength="30"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/Text.Small"
                        android:textColor="@color/colorTextDark"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_email_light_48dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/settings_til_email"
                    android:hint="@string/text_email"
                    style="@style/TIL.Profile">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/settings_et_email"
                        android:layout_width="300dp"
                        android:layout_height="48dp"
                        android:maxLength="30"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@style/Text.Small"
                        android:textColor="@color/colorTextDark"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_32dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_marginEnd="@dimen/margin_20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_camera_light_48dp"/>
                <Button
                    android:id="@+id/settings_btn_change_photo"
                    style="@style/BtnAccent.Settings"
                    android:text="@string/label_change_user_photo"/>
            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_iv_avatar"
                android:layout_width="@dimen/size_40dp"
                android:layout_height="@dimen/size_40dp"/>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:background="@color/colorGrey" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>